Uppdaterat för att kunna köra javafx via terminalen